log
Thu, Mar 27, 2025  5:11:45 PM: 
 tests:  0|6
total_score: 0/70
25021aa
Thu, Mar 27, 2025  5:14:25 PM: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'createList':
list.c:33:9: error: expected identifier or '(' before '->' token
     List->head = NULL;
         ^~
list.c:34:9: error: expected identifier or '(' before '->' token
     List->tail-> NULL;
         ^~
list.c:35:5: error: 'list' undeclared (first use in this function)
     list->current = NULL;
     ^~~~
list.c:35:5: note: each undeclared identifier is reported only once for each function it appears in
list.c:36:12: error: expected expression before 'List'
     return List;
            ^~~~
list.c:32:11: error: unused variable 'new' [-Werror=unused-variable]
     List *new = (List*)malloc(sizeof(List));
           ^~~
list.c:37:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
8e7ba24
Thu, Mar 27, 2025  5:15:20 PM: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  1|5
total_score: 10/70
7a8e14b
Thu, Mar 27, 2025  5:16:48 PM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
6565e38
Thu, Mar 27, 2025  5:18:53 PM: 
 list.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
In file included from test.c:5:0:
list.c: In function 'createList':
list.c:32:24: error: expected expression before ')' token
     List *list = (list*)malloc(sizeof(list));
                        ^
Compilation failed
8dae2f9
Thu, Mar 27, 2025  5:20:33 PM: 
 list.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  0|0
4652dde
Thu, Mar 27, 2025  5:20:53 PM: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
af7a905
Thu, Mar 27, 2025  5:22:31 PM: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
d23cd8c
Thu, Mar 27, 2025  5:24:15 PM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
cf29a39
Thu, Mar 27, 2025  5:26:14 PM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
4cdcf9a
Thu, Mar 27, 2025  5:27:21 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0de620e
Thu, Mar 27, 2025  5:31:44 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 15/70
fbce185
Thu, Mar 27, 2025  5:34:36 PM: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:48:18: error: statement with no effect [-Werror=unused-value]
     list->current->data;
     ~~~~~~~~~~~~~^~~~~~
list.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
94247ad
Thu, Mar 27, 2025  5:39:41 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:49:18: error: statement with no effect [-Werror=unused-value]
     list->current->data;
     ~~~~~~~~~~~~~^~~~~~
list.c:50:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
4ae7667
Thu, Mar 27, 2025  5:40:30 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
47d5a4a
Thu, Mar 27, 2025  5:40:58 PM: 
 list.c | 7 +------
 1 file changed, 1 insertion(+), 6 deletions(-)
In file included from test.c:5:0:
list.c: In function 'lastList':
list.c:54:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
1456873
Thu, Mar 27, 2025  5:41:24 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7906d61
Thu, Mar 27, 2025  5:43:39 PM: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  2|5
total_score: 15/70
28ee7d9
Thu, Mar 27, 2025  5:44:09 PM: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
46b6cc7
Thu, Mar 27, 2025  5:46:57 PM: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|0
b260707
Thu, Mar 27, 2025  5:48:44 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|4
total_score: 25/70
9d56bff
Thu, Mar 27, 2025  5:53:11 PM: 
 list.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  0|0
dffe794
Thu, Mar 27, 2025  5:53:41 PM: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  5|4
total_score: 25/70
cdf4082
Thu, Mar 27, 2025  5:59:41 PM: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
622ef94
Thu, Mar 27, 2025  6:00:45 PM: 
 list.c | 15 ++++-----------
 1 file changed, 4 insertions(+), 11 deletions(-)
 tests:  6|4
total_score: 25/70
67f9252
Thu, Mar 27, 2025  6:03:44 PM: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
585f1af
Thu, Mar 27, 2025  6:06:59 PM: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  9|3
total_score: 35/70
3777b5d
Thu, Mar 27, 2025  6:18:39 PM: 
 list.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
7a4ecc7
ju., 27 de mar. de 2025 21:14:51: 
 list.c | 79 +++++++++++++++++++++++++++++++++++++++++++-----------------------
 1 file changed, 52 insertions(+), 27 deletions(-)
 tests:  9|3
total_score: 35/70
0528b27
ju., 27 de mar. de 2025 21:17:12: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
5283a6b
